add actions r-cmd-check ci

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![lifecycle](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
+[![R-CMD-check](https://github.com/mps9506/quartoYAAC/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/mps9506/quartoYAAC/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 quartoYAAC provides a convenience function for adding the [quarto-yaac](https://github.com/mps9506/quarto-yaac) template to your current R project. It also includes several functions that converts data frames to the .tex used by the underlying document document class.
